# ganfan

./: .gitignore  README.md  cloud_demo.py  download_gradle.ps1  download_mnn_prebuilt.ps1  download_mnn_release.ps1  download_model.ps1  download_studio.ps1  generate_docx.py  get_shot.py  index.html  install_sdk.ps1  mb_helper.py  oss_direct_lfs.ps1  oss_upload_fast.ps1  oss_upload_lfs.ps1  record_demo.py  setup_oss.ps1  setup_oss_v2.ps1  xhs_publish.py
android-app/ScanDeals/: README.md  build.gradle  settings.gradle
android-app/ScanDeals/app/: build.gradle
android-app/ScanDeals/app/src/main/: AndroidManifest.xml
android-app/ScanDeals/app/src/main/cpp/: CMakeLists.txt  qwen_bridge.cpp
android-app/ScanDeals/app/src/main/java/com/mqwen/scandeals/: ApiDeals.kt  CircleActivity.kt  FlashSaleActivity.kt  LocationProvider.kt  MainActivity.kt  MnnBridge.kt  MockDeals.kt  MyActivity.kt  ResultActivity.kt  SignScanActivity.kt  UserPrefs.kt
android-app/ScanDeals/app/src/main/java/com/mqwen/scandeals/ui/theme/: Theme.kt
android-app/ScanDeals/app/src/main/res/drawable/: ic_launcher.xml
android-app/ScanDeals/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/ScanDeals/app/src/main/res/xml/: file_paths.xml
android-app/ScanDeals/gradle/wrapper/: gradle-wrapper.properties
docs/: creative-plan.md  data-strategy.md  day1-acceptance.md  development-plan-v0.2.md  development-plan.md  model-download.md  phase0-tasks.md  phase1-tasks.md  publish-status.md  ram-accesskey-guide.html  xiaohongshu-post-v1.md  xiaohongshu-post.md  商业计划书.md
